--- a/iotdb-core/node-commons/src/assembly/resources/conf/iotdb-system.properties
+++ b/iotdb-core/node-commons/src/assembly/resources/conf/iotdb-system.properties
@@ -71,3 +71,4 @@ cn_metric_prometheus_reporter_port=9091
 # dn_metric_reporter_list=
 dn_metric_prometheus_reporter_port=9092
 
+timestamp_precision=ns
